--- a/video.html
+++ b/video.html
@@ -73,14 +73,9 @@
   </style>
 </head>
 <body>
-  <!-- 🎬 Solo cambia el src cuando tengas tu video listo -->
-  <video controls>
-    <source src="video/IMG_7906.MOV" type="video/mp4">
-    Tu navegador no soporta video HTML5.
-  </video>
-
-  <p>“Este video es una dedicatoria hecha con el corazón, porque algunas palabras solo se entienden cuando se sienten. Y te preguntaras por que se corta al final, y esa respuesta te la dare en llamada. 💜"</p>
+  <p>Shhhh, esta galeria contiene los momentos mas importantes, solo quiero que le des a ese boton y observes, cada foto, para recordar todos los momentos en los que las horas eran eternas, y cada segundo era inolvidable 💜"</p>
 
   <a href="galeria.html">📸 MOMENTOS INOLVIDABLES</a>
 </body>
+
 </html>
