--- a/galeria.html
+++ b/galeria.html
@@ -105,7 +105,7 @@
   <div class="galeria">
     <div class="foto">
       <div class="fecha">7/06/2025</div>
-      <img src="img/IMG-20250607-WA0026.webp" alt="">
+      <img src="IMG-20250607-WA0026.webp" alt="">
     </div>
     <div class="foto">
       <div class="fecha">19/07/2025</div>
@@ -161,3 +161,4 @@
 </body>
 
 </html>
+
