--- a/galeria.html
+++ b/galeria.html
@@ -109,11 +109,11 @@
     </div>
     <div class="foto">
       <div class="fecha">19/07/2025</div>
-      <img src="/img/IMG20250719180112.webp" alt="">
+      <img src="/IMG20250719180112.webp" alt="">
     </div>
     <div class="foto">
       <div class="fecha">20/07/2025</div>
-      <img src="/img/IMG-20250720-WA0026.webp" alt="">
+      <img src="/IMG-20250720-WA0026.webp" alt="">
     </div>
     <div class="foto">
       <div class="fecha">15/07/2025</div>
@@ -161,6 +161,7 @@
 </body>
 
 </html>
+
 
 
 
