--- a/galeria.html
+++ b/galeria.html
@@ -105,55 +105,55 @@
   <div class="galeria">
     <div class="foto">
       <div class="fecha">7/06/2025</div>
-      <img src="/IMG-20250607-WA0026.webp" alt="">
+      <img src="./img/IMG-20250607-WA0026.webp" alt="">
     </div>
     <div class="foto">
       <div class="fecha">19/07/2025</div>
-      <img src="/IMG20250719180112.webp" alt="">
+      <img src="./img/IMG20250719180112.webp" alt="">
     </div>
     <div class="foto">
       <div class="fecha">20/07/2025</div>
-      <img src="/IMG-20250720-WA0026.webp" alt="">
+      <img src="./img/IMG-20250720-WA0026.webp" alt="">
     </div>
     <div class="foto">
       <div class="fecha">15/07/2025</div>
-      <img src="/img/Imagen de WhatsApp 2025-10-24 a las 16.15.07_0b568dd4.jpg" alt="Recuerdo 1">
+      <img src="./img/Imagen de WhatsApp 2025-10-24 a las 16.15.07_0b568dd4.jpg" alt="Recuerdo 1">
     </div>
     <div class="foto">
       <div class="fecha">19/08/2025</div>
-      <img src="/img/Imagen de WhatsApp 2025-10-24 a las 16.15.07_6e441948.jpg" alt="Recuerdo 2">
+      <img src="./img/Imagen de WhatsApp 2025-10-24 a las 16.15.07_6e441948.jpg" alt="Recuerdo 2">
     </div>
     <div class="foto">
       <div class="fecha">21/08/2025</div>
-      <img src="/img/Imagen de WhatsApp 2025-10-24 a las 16.15.07_acc9a190.jpg" alt="Recuerdo 3">
+      <img src="./img/Imagen de WhatsApp 2025-10-24 a las 16.15.07_acc9a190.jpg" alt="Recuerdo 3">
     </div>
     <div class="foto">
       <div class="fecha">22/08/2025</div>
-      <img src="/img/Imagen de WhatsApp 2025-10-24 a las 16.15.07_4d893ed0.jpg" alt="Recuerdo 4">
+      <img src="./img/Imagen de WhatsApp 2025-10-24 a las 16.15.07_4d893ed0.jpg" alt="Recuerdo 4">
     </div>
     <div class="foto">
       <div class="fecha">04/09/2025</div>
-      <img src="/img/Imagen de WhatsApp 2025-10-24 a las 16.15.08_8963e72b.jpg" alt="Recuerdo 5">
+      <img src="./img/Imagen de WhatsApp 2025-10-24 a las 16.15.08_8963e72b.jpg" alt="Recuerdo 5">
     </div>
     <div class="foto">
       <div class="fecha">05/09/2025</div>
-      <img src="/img/Imagen de WhatsApp 2025-10-24 a las 16.15.08_daf1e00c.jpg" alt="Recuerdo 6">
+      <img src="./img/Imagen de WhatsApp 2025-10-24 a las 16.15.08_daf1e00c.jpg" alt="Recuerdo 6">
     </div>
     <div class="foto">
       <div class="fecha">07/09/2025</div>
-      <img src="/img/Imagen de WhatsApp 2025-10-24 a las 16.15.08_58fe5da7.jpg" alt="Recuerdo 7">
+      <img src="./img/Imagen de WhatsApp 2025-10-24 a las 16.15.08_58fe5da7.jpg" alt="Recuerdo 7">
     </div>
     <div class="foto">
       <div class="fecha">09/09/2025</div>
-      <img src="/img/Imagen de WhatsApp 2025-10-24 a las 16.15.09_482005c1.jpg" alt="Recuerdo 8">
+      <img src="./img/Imagen de WhatsApp 2025-10-24 a las 16.15.09_482005c1.jpg" alt="Recuerdo 8">
     </div>
     <div class="foto">
       <div class="fecha">10/09/2025</div>
-      <img src="/img/Imagen de WhatsApp 2025-10-24 a las 16.15.09_0c049428.jpg" alt="Recuerdo 9">
+      <img src="./img/Imagen de WhatsApp 2025-10-24 a las 16.15.09_0c049428.jpg" alt="Recuerdo 9">
     </div>
     <div class="foto">
       <div class="fecha">05/10/2025</div>
-      <img src="/img/Imagen de WhatsApp 2025-10-24 a las 16.15.10_e7417153.jpg" alt="Recuerdo 10">
+      <img src="./img/Imagen de WhatsApp 2025-10-24 a las 16.15.10_e7417153.jpg" alt="Recuerdo 10">
     </div>
   </div>
 
@@ -161,6 +161,7 @@
 </body>
 
 </html>
+
 
 
 
