--- a/video.html
+++ b/video.html
@@ -70,12 +70,29 @@
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
+    .video-container {
+      max-width: 800px;
+      width: 100%;
+    }
+    iframe {
+      width: 100%;
+      height: 450px;
+      border: none;
+    }
   </style>
 </head>
 <body>
+  <p>Este enlace, te expresara lo que siento, lo que cada que te veo late en mi, lo que cada que te escucho se prende en mi, lo que empezo siendo un enamoramiento, termino siendo el motivo de mis dias, y esa razon de mi, eres tu.</p>
+     <iframe
+      src="https://www.youtube.com/embed/TU_ID_AQUI?rel=0&modestbranding=1"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen>
+    </iframe>
+  </div>
   <p>Shhhh, esta galeria contiene los momentos mas importantes, solo quiero que le des a ese boton y observes, cada foto, para recordar todos los momentos en los que las horas eran eternas, y cada segundo era inolvidable 💜"</p>
 
   <a href="galeria.html">📸 MOMENTOS INOLVIDABLES</a>
 </body>
 
 </html>
+
