--- a/video.html
+++ b/video.html
@@ -82,19 +82,20 @@
   </style>
 </head>
 <body>
-     <iframe
-      src="https://youtu.be/XOxfecaO5TY"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen>
-    </iframe>
-  <p>Este enlace, te expresara lo que siento, lo que cada que te veo late en mi, lo que cada que te escucho se prende en mi, lo que empezo siendo un enamoramiento, termino siendo el motivo de mis dias, y esa razon de mi, eres tu.</p>
-  </div>
+  <h1>Para Ti 💜</h1>
+  <p>
+    Este enlace, te expresará lo que siento, lo que cada que te veo late en mí, lo que cada que te escucho se prende en mí, lo que empezó siendo un enamoramiento, terminó siendo el motivo de mis días, y esa razón de mí, eres tú.
+  </p>
+
+  <!-- 🔗 Reemplaza el enlace de abajo con el tuyo de YouTube -->
+  <a href="https://youtu.be/XOxfecaO5TY" target="_blank">FELIZ 7 MESES CORAZON 💌</a>
   <p>Shhhh, esta galeria contiene los momentos mas importantes, solo quiero que le des a ese boton y observes, cada foto, para recordar todos los momentos en los que las horas eran eternas, y cada segundo era inolvidable 💜"</p>
 
   <a href="galeria.html">📸 MOMENTOS INOLVIDABLES</a>
 </body>
 
 </html>
+
 
 
 
